Production/01-02-2025/force-app/main/default/objects/Earnings_Summary__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <label>Billing Date</label>
    <type>DateTime</type>
</CustomField>