Production/01-02-2025/force-app/main/default/objects/Earnings_Summary__c/fields/Data_Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Data_Supplier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Earnings Summary</relationshipLabel>
    <relationshipName>Earnings_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>