Production/01-02-2025/force-app/main/default/objects/Earnings_Summary__c/fields/Net_Earnings_Final_Zero_ed_Out_Conv__c.field-meta.xml
<CustomField>
    <fullName>Net_Earnings_Final_Zero_ed_Out_Conv__c</fullName>
    <label>Net Earnings Final Zero-ed Out (Conv)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>