Production/01-02-2025/force-app/main/default/objects/Earnings_Summary__c/fields/Segments_Database_ID__c.field-meta.xml
<CustomField>
    <fullName>Segments_Database_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segments Database ID</label>
    <referenceTo>Segment_Category_Mapping__c</referenceTo>
    <relationshipLabel>Earnings Summary</relationshipLabel>
    <relationshipName>Earnings_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>